fix flickering issues + make video in Watch component smaller

--- a/src/containers/Watch/WatchContent/WatchContent.scss
+++ b/src/containers/Watch/WatchContent/WatchContent.scss
@@ -1,6 +1,7 @@
 .watch-grid {
   display: grid;
-  grid-template: auto auto auto 1fr / auto 402px;
+  grid-template: auto auto auto 1fr / minmax(0, 1280px) 402px;
+  justify-content: center;
   padding-top: 24px;
   column-gap: 24px;
   grid-row-gap: 8px;
@@ -32,3 +33,4 @@
     grid-row: 3 / 4;
   }
 }
+
